# lab06

./: CMakeLists.txt  CPack.cmake  DESCRIPTION  Report.md  report.md
.github/workflows/: 123.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver
solver_application/_build/formatter_ex/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex/formatter/: Makefile
solver_application/_build/formatter_lib/: Makefile  cmake_install.cmake
solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
